login + more wip tp4

--- a/views/games.templ
+++ b/views/games.templ
@@ -3,3 +3,8 @@ templ GameList(games []db.Game, sortColumn string, sortOrder string){
         
     <html> 
 }
+
+templ GameLayout(games []db.Game, sortColumn, sortOrder string){
+    <div> 
+    </div>
+}
