avances buscador con js

--- a/static/styles.css
+++ b/static/styles.css
@@ -187,3 +187,30 @@ body {
     opacity: 1;
   }
 }
+
+/* Buscador */
+#results {
+  border: 1px solid #ccc;
+  background: white;
+  position: absolute;
+  width: 300px;
+  max-height: 300px;
+  overflow-y: auto;
+  display: none;
+}
+
+.result-item {
+  display: flex;
+  align-items: center;
+  padding: 5px;
+  cursor: pointer;
+}
+
+.result-item img {
+  width: 40px;
+  height: 20px;
+  margin-right: 10px;
+}
+.result-item:hover {
+  background-color: #eee;
+}
