--- a/static/css/index.css
+++ b/static/css/index.css
@@ -9,22 +9,7 @@ html, body {
   background-attachment: fixed;
 }
 
-/* .dashboard {
-    background: linear-gradient(
-    180deg,
-    rgba(21, 29, 87, 1) 0%,
-    rgba(11, 14, 43, 1) 100%
-    );
-    width: 100%;
-     min-width: auto
-     min-height: auto; 
-    display: flex;
-    flex-direction: column;
-    padding: 10px;
-} */
 
-
-/* Contenedor principal */
 .popular-games {
   width: 100%;
   height: 100%;
@@ -35,7 +20,7 @@ html, body {
   gap: 27px;
 }
 
-/* Encabezado */
+
 .popular-header {
   display: flex;
   justify-content: center;
@@ -60,7 +45,7 @@ html, body {
   background: var(--Schemes-Background, #FEF7FF);
 }
 
-/* Contenedor de juegos */
+
 .game-list {
   align-self: stretch;
   height: 320px;
@@ -69,10 +54,10 @@ html, body {
   justify-content: center;
   align-items: center;
   gap: 111px;
-  flex-wrap: wrap; /* Opcional, mejora en pantallas pequeñas */
+  flex-wrap: wrap; 
 }
 
-/* Tarjeta de juego */
+
 .game-card {
   width: 231px;
   height: 320px;
@@ -106,7 +91,7 @@ html, body {
   object-fit: cover;
 }
 
-/* Título del juego */
+
 .game-title {
   height: 60px;
   text-align: center;
