--- a/static/css/index.css
+++ b/static/css/index.css
@@ -96,11 +96,48 @@ html, body {
   height: 60px;
   text-align: center;
   color: #FFFFFF;
-  font-size: 24px;
+  font-size: 1em;
   font-family: "Schibsted Grotesk", sans-serif;
   font-weight: 900;
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 5px;
+}
+
+.game-name-btn {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.dots-btn {
+  border-color: none;
+}
+
+#results {
+  border: 1px solid #ccc;
+  background: white;
+  position: absolute;
+  width: 300px;
+  max-height: 300px;
+  overflow-y: auto;
+  display: none;
+}
+
+.result-item {
+  display: flex;
+  align-items: center;
+  padding: 5px;
+  cursor: pointer;
+}
+
+.result-item img {
+  width: 40px;
+  height: 20px;
+  margin-right: 10px;
+}
+.result-item:hover {
+  background-color: #eee;
 }
