--- a/static/css/index.css
+++ b/static/css/index.css
@@ -17,6 +17,12 @@ p {
   color: #FFFFFF;
 }
 
+.dashboard{
+  display: flex;
+  flex-direction: column;
+
+}
+
 .popular-games {
   width: 100%;
   height: 100%;
@@ -25,6 +31,7 @@ p {
   justify-content: flex-start;
   align-items: flex-start;
   gap: 27px;
+  margin-bottom: 4vh;
 }
 
 
@@ -54,7 +61,6 @@ p {
 
 .game-list {
   align-self: stretch;
-  height: 320px;
   padding: 0 2px;
   display: flex;
   justify-content: center;
