--- a/views/layout.templ
+++ b/views/layout.templ
@@ -1,14 +1,22 @@
 package views
 
-templ Layout(){
+templ LayoutIndex(){
     <!DOCTYPE html>
     <html>
         <head>
             <meta charset="utf-8">
             <meta name="viewport" content="width=device-width, initial-scale=1">
-            <title>{title}</title>
+            <title></title>
         </head>
         <body>
+            <div class="dashboard">
+                <header>
+                    <img src="images/logo.svg" alt="Logo" id="Logo">
+                    @GameSearch
+                    <img src="images/user_icon.svg" alt="User Icon" id="User-Icon">
+                    <p id="username-display">User</p>
+                </header>
+            </div>
         </body>
     </html>
 }
@@ -18,4 +26,49 @@ templ indexLayout() {
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
+}
+
+templ LayoutLogin(){
+    <!DOCTYPE html>
+    <html lang="es">
+        <head>
+            <meta charset="UTF-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=Schibsted+Grotesk:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+            <link rel="stylesheet" href="static/styles.css">
+            <title>GameShelf</title>
+    
+        </head>
+        <body>
+            <main>
+            <div id="login-page">
+                <div class="welcome-column">
+                    <p id="welcome-to" class="schibsted-grotesk white-text">Welcome <span class="pink-text">to </span></p>
+                    <p id="game-shelf" class="schibsted-grotesk white-text">Game <span class="cyan-text">Shelf</span></p>
+                </div>
+                <div class="login-column">
+                    <div id="login-container">
+                        <img src="static/images/user_icon.svg" alt="user_icon" id="user-icon">
+                        <p id="user-login" class="white-text schibsted-grotesk">USER LOGIN</p>
+                        <form id="login-form" action="/dashboard" method="post">
+                            <input class="login-input" type="text" id="username" name="username" placeholder="Username" required>
+                            <input class="login-input" type="password" id="password" name="password" placeholder="Password" required>
+                           <button class="login-btn schibsted-grotesk" type="submit">Log In</button>
+                        </form>
+                    </div>
+                    <p class="white-text schibsted-grotesk">don't have an account? </p>
+                    <a href="register.html" class="blue-text schibsted-grotesk">create one</a>
+                </div>
+                <div id="logo-column">
+                    <img src="static/images/logo.svg" alt="Game Shelf Logo" id="login-illustration">
+                </div>
+            </div>
+            </main>
+
+            <footer>
+            </footer>
+        </body>
+    </html> 
 }
