menu desplegable de 3 puntos sale fuera de la card, bien

--- a/views/games.templ
+++ b/views/games.templ
@@ -23,7 +23,7 @@ templ GameLayout(games []db.Game){
                     </div>
                     <div class="game-name-btn">
                         <div class="game-title">{game.Name}</div>
-                        <div class="dropend">
+                        <div class="dropend position-static">
                             <button type="button" class="btn btn-outline-primary" style="--bs-btn-border-color: none;" data-bs-toggle="dropdown" aria-expanded="false">
                                 <i class="fas fa-ellipsis-v"></i>
                             </button>
