--- a/views/layout.templ
+++ b/views/layout.templ
@@ -1,7 +1,7 @@
 package views
 import db "ProgWeb/db/sqlc"
 
-templ LayoutIndex(games []db.Game, searchedGames []db.Game){
+templ LayoutIndex(games []db.Game, searchedGames []db.Game, user *db.User){
     <!DOCTYPE html>
     <html>
         <head>
@@ -76,6 +76,9 @@ templ LayoutLogin(){
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
             <link href="https://fonts.googleapis.com/css2?family=Schibsted+Grotesk:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+            <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+            <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
             <link rel="stylesheet" href="static/styles.css">
             <title>GameShelf</title>
     
@@ -91,23 +94,54 @@ templ LayoutLogin(){
                     <div id="login-container">
                         <img src="static/images/user_icon.svg" alt="user_icon" id="user-icon">
                         <p id="user-login" class="white-text schibsted-grotesk">USER LOGIN</p>
-                        <form id="login-form" action="/dashboard" method="post">
+                        <form id="login-form" action="/login" method="post">
                             <input class="login-input" type="text" id="username" name="username" placeholder="Username" required>
                             <input class="login-input" type="password" id="password" name="password" placeholder="Password" required>
                            <button class="login-btn schibsted-grotesk" type="submit">Log In</button>
                         </form>
                     </div>
                     <p class="white-text schibsted-grotesk">don't have an account? </p>
-                    <a href="register.html" class="blue-text schibsted-grotesk">create one</a>
+                    <button class="blue-text schibsted-grotesk" data-bs-toggle="modal" data-bs-target="#createUserModal">create one</button>
                 </div>
                 <div id="logo-column">
                     <img src="static/images/logo.svg" alt="Game Shelf Logo" id="login-illustration">
                 </div>
             </div>
+            @createUserModal()
             </main>
 
             <footer>
             </footer>
         </body>
     </html> 
+}
+
+templ createUserModal(){
+    <div class="modal fade" id="createUserModal" tabindex="-1" aria-labelledby="createUserModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div id="createUserModalContent" class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="createUserModalLabel">Create User</h5>
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+                </div>
+
+                <form id="createUserForm" action="/users" method="POST">
+                    <div class="modal-body">
+                        <div class="mb-3">
+                            <input class="form-control" type="text" id="username" name="username" placeholder="Username" required>
+                        </div>
+                        <div class="mb-3">
+                            <input class="form-control" type="password" id="password" name="password" placeholder="Password" required>
+                        </div>
+                    </div>
+
+                    <div class="modal-footer">
+                        <button type="button" class="custom-close-btn" data-bs-dismiss="modal">Close</button>
+                        <button type="submit" class="custom-save-btn">Sign In</button>
+                    </div>
+                </form>
+
+            </div>
+        </div>
+    </div>
 }
