--- a/static/css/index.css
+++ b/static/css/index.css
@@ -23,6 +23,18 @@ p {
 
 }
 
+#logout-button {
+  color: #8387a3;
+  font-size: 0.8rem;
+  text-decoration: none;
+  font-family: "Schibsted Grotesk", sans-serif;
+}
+
+#logout-button:hover {
+  text-decoration: underline;
+  color: #FFFFFF;
+}
+
 .popular-games {
   width: 100%;
   height: 100%;
@@ -197,8 +209,16 @@ header {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between; 
   margin-bottom: 20px;
+  padding: 0 20px;
+  height: 60px;
+}
+
+#user-profile-menu {
+    display: flex;
+    align-items: center;
+    gap: 10px;
 }
 
 #search {
@@ -223,20 +243,31 @@ header {
 }
 
 #Logo {
-  margin-right: 3vw;
+  height: 80px;
+  margin-top: 30px;
+  margin-right: 0; 
+}
+
+#user-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    line-height: 1.1;
 }
 
 #User-Icon {
-  width: 7vw;
-  height: 7vh;
+  width: 50px; 
+  height: 50px;
   margin: 0;
-  margin-left: 2vw;
+  border: 2px solid #ff00cc; 
+  border-radius: 50%;
+  box-shadow: 0 0 15px #ff00cc;
 }
 #username-display {
   color: #FFFFFF;
   font-family: "Schibsted Grotesk", sans-serif;
   font-weight: 700;
-  font-size: 3rem;
+  font-size: 1.1rem; 
   margin: 0;
 }
 
