--- a/views/layout.templ
+++ b/views/layout.templ
@@ -20,7 +20,7 @@ templ LayoutIndex(games []db.Game, searchedGames []db.Game, user *db.User){
                     <img src="/static/images/logo.svg" alt="Logo" id="Logo">
                     @GameSearch(searchedGames)
                     <img src="/static/images/user_icon.svg" alt="User Icon" id="User-Icon">
-                    <p id="username-display">User</p>
+                    <p id="username-display">{user.Name}</p>
                 </header>
                 <div class="popular-games">
                     <div class="popular-header">
