--- a/static/css/index.css
+++ b/static/css/index.css
@@ -89,6 +89,7 @@ p {
   border-radius: 21px;
   outline: 1px solid rgba(255, 255, 255, 0.13);
   outline-offset: -1px;
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -98,6 +99,24 @@ p {
   margin-right: 4vw;
   gap: 5px;
 }
+
+.state-icon-container {
+    position: absolute;
+    text-align: center;
+    top: 5px;
+    right: 5px;
+    z-index: 10;
+}
+
+.state-icon {
+    width: 30px;  
+    height: 30px;
+    border-radius: 50%;
+    padding: 3px;
+    color:white;
+    box-shadow: 0 0 5px rgba(255, 255, 255, 0.8);
+}
+
 
 #add-game-card {
   border: #FFFFFF 10px dashed;
