--- a/views/layout.templ
+++ b/views/layout.templ
@@ -1,7 +1,7 @@
 package views
 import db "ProgWeb/db/sqlc"
 
-templ LayoutIndex(games []db.Game, searchedGames []db.Game, user *db.User){
+templ LayoutIndex(games []db.Game, searchedGames []db.Game, user *db.User, plays []db.Play){
     <!DOCTYPE html>
     <html>
         <head>
@@ -13,6 +13,7 @@ templ LayoutIndex(games []db.Game, searchedGames []db.Game, user *db.User){
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
             <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+            <script src="https://kit.fontawesome.com/5ec143c519.js" crossorigin="anonymous"></script>
         </head>
         <body>
             <div class="dashboard">
@@ -63,7 +64,7 @@ templ LayoutIndex(games []db.Game, searchedGames []db.Game, user *db.User){
                         <h2>My games</h2>
                         <div class="header-icon"><i class="bi bi-bookmark"></i></div>
                     </div>
-                    @GameLayout(games, user)
+                    @GameLayout(games, user, plays)
                 </div>
     </div>
         </body>
