--- a/views/games.templ
+++ b/views/games.templ
@@ -34,12 +34,13 @@ templ GameLayout(games []db.Game, user *db.User){
                                         <button type="submit" class="dropdown-item">Delete</button>
                                     </form>
                                 </li>   
-                                <li>
-                                    <div style="display:inline;">
-                                        
-                                        <button type="button" class="dropdown-item" data-bs-toggle="modal" data-bs-target={"#updateGameModal" + fmt.Sprintf("%d", game.ID)}>Update</button>
-                                    </div>
-                                </li>  
+                                if game.Custom == "1" {
+                                    <li>
+                                        <div style="display:inline;">
+                                            <button type="button" class="dropdown-item" data-bs-toggle="modal" data-bs-target={"#updateGameModal" + fmt.Sprintf("%d", game.ID)}>Update</button>
+                                        </div>
+                                    </li> 
+                                }
                             </ul>
                             <div>@updateGameModal(game)</div>
                         </div>
@@ -66,6 +67,7 @@ templ GameSearch(searchedGames []db.Game) {
                     <input type="hidden" name="description" value="Imported from Steam" />
                     <input type="hidden" name="image" value={fmt.Sprintf("https://cdn.cloudflare.steamstatic.com/steam/apps/%d/hero_capsule.jpg", game.ID)} />
                     <input type="hidden" name="link" value={game.Link} />
+                    <input type="hidden" name="custom" value={game.Custom} />
 
                     <button type="submit" class="result-button">
                         <img src={game.Image} alt={game.Name} />
@@ -105,6 +107,7 @@ templ addGameModal() {
                             <label for="link" class="form-label">Steam Link</label>
                             <input type="url" class="form-control" id="link" name="link">
                         </div>
+                            <input type="hidden" name="custom" value="1">
                     </div>
 
                     <div class="modal-footer">
