--- a/views/layout.templ
+++ b/views/layout.templ
@@ -14,6 +14,7 @@ templ LayoutIndex(games []db.Game, searchedGames []db.Game, user *db.User, plays
             <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
             <script src="https://kit.fontawesome.com/5ec143c519.js" crossorigin="anonymous"></script>
+            <script src="https://unpkg.com/htmx.org@1.9.12"></script>
         </head>
         <body>
             <div class="dashboard">
