--- a/views/games.templ
+++ b/views/games.templ
@@ -3,6 +3,7 @@ package views
 import db "ProgWeb/db/sqlc"
 import "fmt"
 
+
 templ GameList(games []db.Game, sortColumn string, sortOrder string){
     <html>
         
@@ -66,10 +67,14 @@ templ GameLayout(games []db.Game, user *db.User, plays []db.Play) {
                             </button>
                             <ul class="dropdown-menu">
                                 <li>
-                                    <form action={fmt.Sprintf("/plays/%d/%d", game.ID, user.ID)} method="POST" style="display:inline;">
-                                        <input type="hidden" name="_method" value="DELETE">
-                                        <button type="submit" class="dropdown-item">Delete</button>
-                                    </form>
+                                    <button
+                                    hx-delete={ fmt.Sprintf("/plays/%d/%d", game.ID, user.ID) }
+                                    hx-target="#gameList"
+                                    hx-swap="outerHTML"
+                                    class="dropdown-item"
+                                    >
+                                    Delete
+                                </button>
                                 </li>   
                                 if game.Custom == "1" {
                                     <li>
@@ -93,13 +98,18 @@ templ GameLayout(games []db.Game, user *db.User, plays []db.Play) {
 
 templ GameSearch(searchedGames []db.Game) {
     <div class="search-container">
-        <form action="/steam/search/" method="GET">
-            <input type="text" id="search" name="query" placeholder="⌕ Search on Steam..." autocomplete="off" />
+        <form >
+            <input type="text" id="search" name="query" hx-get="/steam/search/" hx-trigger="input delay:500ms" hx-target="#results" hx-swap="outerHTML" placeholder="⌕ Search on Steam..." autocomplete="off" />
         </form>
-        <div id="results">
-        if len(searchedGames) > 0 {
+        @GameSearchResults(searchedGames)
+    </div>
+}
+
+templ GameSearchResults(searchedGames []db.Game) {
+    <div id="results">
+        if len(searchedGames) > 0 && searchedGames != nil{
             for _, game := range searchedGames {
-                <form class="result-item" action="/games" method="POST">
+                <form class="result-item"  hx-post="/games" hx-target="#gameList" hx-swap="outerHTML">
                     <input type="hidden" name="name" value={game.Name} />
                     <input type="hidden" name="description" value="Imported from Steam" />
                     <input type="hidden" name="image" value={fmt.Sprintf("https://cdn.cloudflare.steamstatic.com/steam/apps/%d/hero_capsule.jpg", game.ID)} />
@@ -113,7 +123,6 @@ templ GameSearch(searchedGames []db.Game) {
                 </form>
             }
         }
-        </div>
     </div>
 }
 
@@ -126,7 +135,7 @@ templ addGameModal() {
                     <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Cerrar"></button>
                 </div>
 
-                <form id="addGameForm" action="/games" method="POST">
+                <form id="addGameForm" hx-post="/games" hx-target="#gameList" hx-swap="outerHTML">
                     <div class="modal-body">
                         <div class="mb-3">
                             <label for="name" class="form-label">Game Name</label>
@@ -167,8 +176,8 @@ templ updateGameModal(game db.Game) {
                     <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Cerrar"></button>
                 </div>
 
-                <form id="addGameForm" action={fmt.Sprintf("/games/%d", game.ID)} method="POST">
-                    <input type="hidden" name="_method" value="PUT">
+                <form id="addGameForm" hx-put={fmt.Sprintf("/games/%d", game.ID)} hx-target="#gameList" hx-swap="innerHTML">
+                    
                     <div class="modal-body">
                         <div class="mb-3">
                             <label for="name" class="form-label">Game Name</label>
@@ -190,7 +199,10 @@ templ updateGameModal(game db.Game) {
 
                     <div class="modal-footer">
                         <button type="button" class="custom-close-btn" data-bs-dismiss="modal">Close</button>
-                        <button type="submit" class="custom-save-btn">Save</button>
+                        <button type="submit" class="custom-save-btn" data-bs-dismiss="modal">
+                            Update
+                        </button>
+                        
                     </div>
                 </form>
 
